--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@supabase/supabase-js": "^2.45.0",
     "dompurify": "^3.2.6",
     "lucide-react": "^0.513.0",
-    "next": "15.3.3",
+    "next": "^15.3.4",
     "quill": "^2.0.3",
-    "react": "^19.0.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.8",
